--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,6 +4,9 @@
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <meta name='description' content='Built Rite Creations provides advanced laser cleaning solutions for industrial equipment, historic structures, and metal surfaces. Safe, efficient, and eco-friendly rust removal, paint stripping, and surface restoration services.' />
         <title>Built Rite Creations - Advanced Laser Cleaning Solutions</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id='root'></div>
